<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sort_default"
            android:checked="true"
            android:title="@string/sort_default"
            app:showAsAction="never" />
        <item
            android:id="@+id/sort_rating"
            android:checked="false"
            android:title="@string/sort_rating"
            app:showAsAction="never" />
        <item
            android:id="@+id/sort_newest"
            android:checked="false"
            android:title="@string/sort_newest"
            app:showAsAction="never" />
        <item
            android:id="@+id/sort_oldest"
            android:checked="false"
            android:title="@string/sort_oldest"
            app:showAsAction="never" />
    </group>
</menu>