<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_favorite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    android:background="#f5f5f5">

    <ImageView
        android:id="@+id/iv_fav_poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/poster_favorite"
        android:src="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="35dp"
        android:maxLines="3"
        android:padding="8dp"
        android:text="@string/title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/iv_delete"
        app:layout_constraintStart_toEndOf="@+id/iv_fav_poster"
        app:layout_constraintTop_toTopOf="@+id/iv_fav_poster"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="35dp"
        android:maxLines="2"
        android:paddingStart="16dp"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="@+id/iv_fav_poster"
        app:layout_constraintEnd_toStartOf="@+id/iv_delete"
        app:layout_constraintStart_toEndOf="@+id/iv_fav_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="30dp"
        android:layout_height="170dp"
        android:background="@color/green_a200"
        android:contentDescription="@string/delete"
        android:src="@drawable/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>