<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingEnd="14dp"
    android:paddingBottom="16dp"
    tools:ignore="RtlSymmetry">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/img_item"
        android:layout_width="154dp"
        android:layout_height="199dp"
        android:layout_marginHorizontal="21dp"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:scaleType="fitXY"
        android:src="@color/blue_gray_600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_border_color="?attr/colorOnPrimary"
        app:riv_border_width="4dp"
        app:riv_corner_radius="3dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/rating_container"
        android:elevation="10dp"
        android:src="@drawable/ic_rating"
        app:layout_constraintBottom_toBottomOf="@+id/img_item"
        app:layout_constraintEnd_toEndOf="@+id/img_item" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        android:paddingBottom="2dp"
        android:text="@string/rating"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="SmallSp" />

    <androidx.cardview.widget.CardView
        android:layout_width="168dp"
        android:layout_height="254dp"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rect"
        android:focusable="true"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="168dp"
        android:layout_height="254dp"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="50dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="170dp"
            android:gravity="center"
            android:maxLines="2"
            android:paddingHorizontal="8dp"
            android:text="@string/title"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="210dp"
            android:gravity="center|top"
            android:maxLines="2"
            android:paddingHorizontal="8dp"
            android:text="@string/description"
            android:textColor="@color/lite"
            android:textSize="12sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>